--- a/sections/references.bib
+++ b/sections/references.bib
@@ -11,6 +11,35 @@ doi={10.1147/rd.33.0210},
 ISSN={0018-8646}, 
 month={July},}
 
+@Article{svm,
+author="Cortes, Corinna
+and Vapnik, Vladimir",
+title="Support-vector networks",
+journal="Machine Learning",
+year="1995",
+month="Sep",
+day="01",
+volume="20",
+number="3",
+pages="273--297",
+issn="1573-0565",
+doi="10.1007/BF00994018",
+url="https://doi.org/10.1007/BF00994018"
+}
+
+@ARTICLE{ensemble, 
+author={R. Polikar}, 
+journal={IEEE Circuits and Systems Magazine}, 
+title={Ensemble based systems in decision making}, 
+year={2006}, 
+volume={6}, 
+number={3}, 
+pages={21-45}, 
+keywords={decision making;decision support systems;error correction codes;expert systems;learning (artificial intelligence);learning systems;pattern classification;reviews;sensor fusion;AdaBoost;automated decision making;bagging;behavior knowledge space;boosting;confidence estimation;data fusion;decision templates;ensemble based systems;error correcting output codes;feature selection;incremental learning;multiple classifier systems;single-expert systems;stacked generalization;voting based techniques;Bagging;Boosting;Computational intelligence;Decision making;Error correction codes;Estimation error;Game theory;TV;Telephony;Voting}, 
+doi={10.1109/MCAS.2006.1688199}, 
+ISSN={1531-636X}, 
+month={Third},}
+
 @ARTICLE{kearnsli,
     author = {Michael Kearns and Ming Li},
     title = {Learning in the Presence of Malicious Errors},
