--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,6 @@
 \usetikzlibrary{shapes,arrows,fit,calc,positioning, snakes, patterns}
 \usetikzlibrary{backgrounds}
 
-
 % math packages
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -69,47 +68,74 @@
 
 % custom colors
 \usepackage{color}
-\definecolor{light-gray}{gray}{0.96}
-\definecolor{cyan}{RGB}{230,230,255}
-\definecolor{dkgreen}{rgb}{0,0.6,0}
-\definecolor{gray}{rgb}{0.5,0.5,0.5}
-\definecolor{mauve}{rgb}{0.58,0,0.82}
+%\definecolor{light-gray}{gray}{0.96}
+%\definecolor{cyan}{RGB}{230,230,255}
+%\definecolor{dkgreen}{rgb}{0,0.6,0}
+%\definecolor{gray}{rgb}{0.5,0.5,0.5}
+%\definecolor{mauve}{rgb}{0.58,0,0.82}
+%
+%% environment for bash code
+%\lstset{ %
+%  language=bash,                % the language of the code
+%  basicstyle=\footnotesize,           % the size of the fonts that are used for the code
+%  numbers=left,                   % where to put the line-numbers
+%  numberstyle=\footnotesize,          % the size of the fonts that are used for the line-numbers
+%  stepnumber=1,                   % the step between two line-numbers. If it's 1, each line 
+%                                  % will be numbered
+%  numbersep=5pt,                  % how far the line-numbers are from the code
+%  backgroundcolor=\color{white},      % choose the background color. You must add \usepackage{color}
+%  showspaces=false,               % show spaces adding particular underscores
+%  showstringspaces=false,         % underline spaces within strings
+%  showtabs=false,                 % show tabs within strings adding particular underscores
+%%  frame=single,                   % adds a frame around the code
+%  rulecolor=\color{black},        % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. commens (green here))
+%  tabsize=2,                      % sets default tabsize to 2 spaces
+%  captionpos=b,                   % sets the caption-position to bottom
+%  breaklines=true,                % sets automatic line breaking
+%  breakatwhitespace=false,        % sets if automatic breaks should only happen at whitespace
+%  title=\lstname,                   % show the filename of files included with \lstinputlisting;
+%                                  % also try caption instead of title
+%  numberstyle=\tiny\color{gray},        % line number style
+%  keywordstyle=\textbf,          % keyword style
+%  commentstyle=\color{dkgreen},       % comment style
+%%  stringstyle=\color{mauve},         % string literal style
+%  escapeinside={\%*}{*)},            % if you want to add a comment within your code
+%  morekeywords={*,...,insert,-}               % if you want to add more keywords to the setù
+%}
+%
+%
+%% environment for python code
+%\lstset{
+%language=Python,
+%breaklines=true,
+%breakatwhitespace=true ,
+%backgroundcolor=\color{light-gray}
+%}
 
-% environment for bash code
-\lstset{ %
-  language=bash,                % the language of the code
-  basicstyle=\footnotesize,           % the size of the fonts that are used for the code
-  numbers=left,                   % where to put the line-numbers
-  numberstyle=\footnotesize,          % the size of the fonts that are used for the line-numbers
-  stepnumber=1,                   % the step between two line-numbers. If it's 1, each line 
-                                  % will be numbered
-  numbersep=5pt,                  % how far the line-numbers are from the code
-  backgroundcolor=\color{white},      % choose the background color. You must add \usepackage{color}
-  showspaces=false,               % show spaces adding particular underscores
-  showstringspaces=false,         % underline spaces within strings
-  showtabs=false,                 % show tabs within strings adding particular underscores
-%  frame=single,                   % adds a frame around the code
-  rulecolor=\color{black},        % if not set, the frame-color may be changed on line-breaks within not-black text (e.g. commens (green here))
-  tabsize=2,                      % sets default tabsize to 2 spaces
-  captionpos=b,                   % sets the caption-position to bottom
-  breaklines=true,                % sets automatic line breaking
-  breakatwhitespace=false,        % sets if automatic breaks should only happen at whitespace
-  title=\lstname,                   % show the filename of files included with \lstinputlisting;
-                                  % also try caption instead of title
-  numberstyle=\tiny\color{gray},        % line number style
-  keywordstyle=\textbf,          % keyword style
-  commentstyle=\color{dkgreen},       % comment style
-%  stringstyle=\color{mauve},         % string literal style
-  escapeinside={\%*}{*)},            % if you want to add a comment within your code
-  morekeywords={*,...,insert,-}               % if you want to add more keywords to the setù
-}
+\definecolor{Brown}{cmyk}{0,0.81,1,0.60}
+\definecolor{OliveGreen}{cmyk}{0.64,0,0.95,0.40}
+\definecolor{CadetBlue}{cmyk}{0.62,0.57,0.23,0}
+\definecolor{lightlightgray}{gray}{0.9}
 
-% environment for python code
 \lstset{
-language=Python,
-breaklines=true,
-breakatwhitespace=true ,
-backgroundcolor=\color{light-gray}
+language=Python,                             % Code langugage
+basicstyle=\footnotesize\ttfamily,                   % Code font, Examples: \footnotesize, \ttfamily
+keywordstyle=\color{OliveGreen},        % Keywords font ('*' = uppercase)
+commentstyle=\color{gray},              % Comments font
+numbers=left,                           % Line nums position
+numberstyle=\tiny,                      % Line-numbers fonts
+stepnumber=1,                           % Step between two line-numbers
+numbersep=5pt,                          % How far are line-numbers from code
+backgroundcolor=\color{lightlightgray}, % Choose background color
+frame=none,                             % A frame around the code
+tabsize=2,                              % Default tab size
+captionpos=b,                           % Caption-position = bottom
+breaklines=true,                        % Automatic line breaking?
+breakatwhitespace=true,                % Automatic breaks only at whitespace?
+showspaces=false,                       % Dont make spaces visible
+showtabs=false,                         % Dont make tabls visible
+columns=flexible,                       % Column format
+%morekeywords={__global__, __device__},  % CUDA specific keywords
 }
 % appendices package
 %\usepackage{appendix}
